added moving image: shift + mouse move

--- a/web/drawing_board.html
+++ b/web/drawing_board.html
@@ -39,5 +39,9 @@
             drawPad.save();
         }
 
+        function redraw(xOffset=0, yOffset=0) {
+            drawPad.redraw(xOffset, yOffset);
+        }
+
     </script>
 </html>
