updated page layout

--- a/web/drawing_board.html
+++ b/web/drawing_board.html
@@ -22,8 +22,8 @@
                 <button onclick="save()">Save</button>
             </span>
         </div>
-        <hr/>
-        <div id="DrawArea"></div>
+        <div id="horizontal_space" style="padding-top:5px;padding-bottom: 5px;"> </div>
+        <div id="DrawArea" style="margin-left: 20px; margin-top: 20px;"></div>
     </body>
     <script>
         const drawPad = new DrawPad(document.getElementById("DrawArea"));
