added jepg and better handle color block

--- a/web/drawing_board.html
+++ b/web/drawing_board.html
@@ -53,6 +53,7 @@
                     <option name="none" value="none">--</option>
                     <option name="json" value="text/plain">JSON</option>
                     <option name="png" value="image/png">PNG</option>
+                    <option name="jpeg" value="image/jpeg">JPEG</option>
                 </select>
             </span>
         </div>
