refactored and added index

--- a/drawing_board.html
+++ b/drawing_board.html
@@ -1,7 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <meta charset="utf8">
     <head>
-        <title>Draw Pad</title>
+        <title>Draw Board</title>
         <link rel="stylesheet" href="css/global-styles.css"/>
     </head>
     <script src="js/lib.js"></script>
